--- a/force-app/main/default/classes/AuraHelper.cls
+++ b/force-app/main/default/classes/AuraHelper.cls
@@ -3,9 +3,13 @@
  */
 
 public class AuraHelper {
-    
+
     public static Object throwException(Exception e){
-        System.debug('THROW EXCEPTION: ' + e.getMessage() + '\n' + e.getStackTraceString());
-        throw new AuraHandledException(e.getMessage() + '\n' + e.getStackTraceString());
+        String errorMessage = e.getMessage() + '\n' + e.getStackTraceString();
+        System.debug('THROW EXCEPTION: ' + errorMessage);
+        Exception auraException = new AuraHandledException(errorMessage);
+        auraException.setMessage(errorMessage);
+        throw auraException;
     }
+
 }
