--- a/force-app/main/default/classes/Batch_PSECreateInvitation.cls
+++ b/force-app/main/default/classes/Batch_PSECreateInvitation.cls
@@ -2,11 +2,9 @@
  * Created by Igor Malyuta on 29.05.2019.
  */
 
-public with sharing class Batch_PSECreateInvitation implements Database.Batchable<Participant_Study_Enrollment__c>, Database.Stateful {
+public with sharing class Batch_PSECreateInvitation extends Batch_ScheduledAbstract{
 
-    public static final String JOB_NAME = 'CreateSurveyInvitation';
-
-    public Iterable<Participant_Study_Enrollment__c> start(Database.BatchableContext param1) {
+    public Iterable<SObject> start(Database.BatchableContext param1) {
         List<Trial_Survey__c> trialSurveys = [
                 SELECT
                         Active_After_Days__c
@@ -33,7 +31,7 @@ public with sharing class Batch_PSECreateInvitation implements Database.Batchabl
         ];
     }
 
-    public void execute(Database.BatchableContext param1, List<Participant_Study_Enrollment__c> enrollments) {
+    public void execute(Database.BatchableContext param1, List<SObject> enrollments) {
         List<Trial_Survey__c> trialSurveys = [
                 SELECT
                         Id,
@@ -69,22 +67,19 @@ public with sharing class Batch_PSECreateInvitation implements Database.Batchabl
                 FROM SurveyInvitation
                 WHERE Participant_Study_Enrollment__c IN:enrollments
         ];
-        System.debug('Current invitations: ' + surveyInvitation.size());
 
         Map<String, SurveyInvitation> invitationMap = new Map<String, SurveyInvitation>();
         for(SurveyInvitation inv : surveyInvitation) {
-            System.debug('INV Key: ' + inv.Participant_Study_Enrollment__c + inv.Trial_Survey__c);
             invitationMap.put('' + inv.Participant_Study_Enrollment__c + inv.Trial_Survey__c, inv);
         }
 
         List<SurveyInvitation> newInvitations = new List<SurveyInvitation>();
-        for(Participant_Study_Enrollment__c pse : enrollments) {
+        for(Participant_Study_Enrollment__c pse : (List<Participant_Study_Enrollment__c>) enrollments) {
             List<Trial_Survey__c> surveys = ctpTotsMap.get(pse.Clinical_Trial_Profile__c);
             if(surveys != null) {
                 for(Trial_Survey__c surv : surveys) {
                     if(surv.Active_After_Days__c == pse.Days_After_Enrolled__c || surv.Active_On_Status__c == pse.Status__c) {
                         String key = '' + pse.Id + surv.Id;
-                        System.debug('TS Key: ' + pse.Id + surv.Id);
                         if(invitationMap.get(key) == null) {
                             newInvitations.add(SurveyService.getInstance().generateInvitation(surv, pse));
                         }
@@ -98,30 +93,8 @@ public with sharing class Batch_PSECreateInvitation implements Database.Batchabl
         TaskService.getInstance().createSurveyTasks(newInvitations);
     }
 
-    public void finish(Database.BatchableContext param1) {
-        List<Batch_Executor__mdt> batchExecutor = [
-                SELECT Relaunch_Interval__c FROM Batch_Executor__mdt WHERE Job_Name__c = :JOB_NAME];
-        if(!batchExecutor.isEmpty()) {
-            Integer minutes = batchExecutor.get(0).Relaunch_Interval__c.intValue();
-            System.scheduleBatch(
-                    new Batch_PSECreateInvitation(), JOB_NAME, minutes);
-        }
+    public override Type getType() {
+        return Batch_PSECreateInvitation.class;
     }
 
-    public static void run() {
-        Database.executeBatch(new Batch_PSECreateInvitation());
-    }
-
-    public static void stop() {
-        List<CronTrigger> cronTriggers = [
-                SELECT Id
-                FROM CronTrigger
-                WHERE CronJobDetail.Name =: JOB_NAME
-        ];
-        if(!cronTriggers.isEmpty()) {
-            for(CronTrigger cronT : cronTriggers) {
-                System.abortJob(cronT.Id);
-            }
-        }
-    }
 }
