--- a/force-app/main/default/classes/Batch_PatientTaskExpire.cls
+++ b/force-app/main/default/classes/Batch_PatientTaskExpire.cls
@@ -2,11 +2,9 @@
  * Created by Igor Malyuta on 28.05.2019.
  */
 
-public with sharing class Batch_PatientTaskExpire implements Database.Batchable<Task>, Database.Stateful{
+public with sharing class Batch_PatientTaskExpire extends Batch_ScheduledAbstract{
 
-    private static final String JOB_NAME = 'PatientTaskExpire';
-
-    public Iterable<Task> start(Database.BatchableContext param1) {
+    public Iterable<SObject> start(Database.BatchableContext param1) {
         List<Task> tasks = [
                 SELECT Id
                 FROM Task
@@ -23,30 +21,8 @@ public with sharing class Batch_PatientTaskExpire implements Database.Batchable<
         update tasks;
     }
 
-    public void finish(Database.BatchableContext param1) {
-        List<Batch_Executor__mdt> batchExecutor = [
-                SELECT Relaunch_Interval__c FROM Batch_Executor__mdt WHERE Job_Name__c = :JOB_NAME];
-        if(!batchExecutor.isEmpty()) {
-            Integer minutes = batchExecutor.get(0).Relaunch_Interval__c.intValue();
-            System.scheduleBatch(
-                    new Batch_PatientTaskExpire(), JOB_NAME, minutes);
-        }
+    public override Type getType() {
+        return Batch_PatientTaskExpire.class;
     }
 
-    public static void run() {
-        Database.executeBatch(new Batch_PatientTaskExpire());
-    }
-
-    public static void stop() {
-        List<CronTrigger> cronTriggers = [
-                SELECT Id
-                FROM CronTrigger
-                WHERE CronJobDetail.Name =: JOB_NAME
-        ];
-        if(!cronTriggers.isEmpty()) {
-            for(CronTrigger cronT : cronTriggers) {
-                System.abortJob(cronT.Id);
-            }
-        }
-    }
 }
